@@ -1,3 +1,12 @@
+2022-08-16 Hugo Melder <contact@hugomelder.com>
+
+	* Source/win32/GSFileHandle.m:
+	Support overlapped I/O on standard streams in GSFileHandle.
+	* Source/GSFileHandle.h:
+	Add the isStandardStream instance variable.
+	* Tests/base/NSRunLoop/performers.m:
+	Remove extraneous unistd header from unit test.
+
 2022-08-16 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSOperation.m: Remove restriction (of 8) on the maximum
